<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <include
        layout="@layout/tool_bar"
        android:id="@+id/tool_bar_setting">
    </include>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="12dp"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/bouncy_setting_text"
                    android:textSize="20sp"
                    android:layout_gravity="left">
                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="0"
                    android:gravity="center_vertical|right"
                    android:paddingRight="10dp"
                    android:id="@+id/bouncy_text">

                </TextView>

                <SeekBar
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:id="@+id/seek_bar_setting">

                </SeekBar>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sensibility_set_text"
                    android:textSize="20sp"
                    android:layout_gravity="left">
                </TextView>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:id="@+id/sens_spinner"
                    android:entries="@array/strength_set">

                </androidx.appcompat.widget.AppCompatSpinner>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/friction_set_text"
                    android:textSize="20sp"
                    android:layout_gravity="left">
                </TextView>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:id="@+id/friction_spinner"
                    android:entries="@array/strength_set">

                </androidx.appcompat.widget.AppCompatSpinner>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/set_vibration_text"
                    android:textSize="20sp"
                    android:layout_gravity="left">
                </TextView>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:id="@+id/vibration_switch"
                    android:checked="true">
                </Switch>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:id="@+id/strength_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/vibration_strength_set_text"
                    android:textSize="20sp"
                    android:layout_gravity="left">
                </TextView>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:id="@+id/vibration_spinner"
                    android:entries="@array/strength_set">

                </androidx.appcompat.widget.AppCompatSpinner>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>